update readme according to new command name
Signed-off-by: Burak Sekili <buraksekili@gmail.com>

--- a/readme
+++ b/readme
@@ -1,16 +1,17 @@
 Usage: ./backup.sh [command] [options]
 
 Commands:
+ help      Print this message
  export    Export Tyk API Definitions and Policies from a Tyk Dashboard.
- upload    Upload Tyk API Definitions and Policies to a Tyk Dashboard.
+ import    Upload Tyk API Definitions and Policies to a Tyk Dashboard.
 
 Options:
  --url            URL of the Tyk Dashboard (required).
  --secret         Access key of your user in the Tyk Dashboard (required).
  --api-output     (export only) Output file for the exported Tyk API Definitions (required).
  --policy-output  (export only) Output file for the exported Tyk Policies (optional).
- --api-file       (upload only) File containing the Tyk API Definitions to be uploaded (required).
- --policy-file    (upload only) File containing the Tyk Policies to be uploaded (optional).
+ --api-file       (import only) File containing the Tyk API Definitions to be uploaded (required).
+ --policy-file    (import only) File containing the Tyk Policies to be uploaded (optional).
 
 Examples:
    Export Tyk API Definitions:
@@ -20,7 +21,7 @@ Examples:
       ./backup.sh export --url https://my-tyk-dashboard.com --secret mysecretkey --api-output apis.json --policy-output policies.json
 
    Upload Tyk API Definitions:
-      ./backup.sh upload --url https://my-tyk-dashboard.com --secret mysecretkey --api-file apis.json
+      ./backup.sh import --url https://my-tyk-dashboard.com --secret mysecretkey --api-file apis.json
 
    Upload Tyk API Definitions and Policies:
-      ./backup.sh upload --url https://my-tyk-dashboard.com --secret mysecretkey --api-file apis.json --policy-file policies.json
+      ./backup.sh import --url https://my-tyk-dashboard.com --secret mysecretkey --api-file apis.json --policy-file policies.json
